# 2Pc_Phoneversion

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/newtyvision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/newtyvision/: BezierAim.kt  MainActivity.kt  MakcuManager.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/newtyvision/: ExampleUnitTest.kt
config/: device.properties.example
gradle/wrapper/: gradle-wrapper.properties
